01-business-app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: proxy-app
  labels:
    app: whoami

spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-v1
  template:
    metadata:
      labels:
        app: proxy-v1
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
