02-business-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: proxy-app

spec:
  ports:
    - name: web
      port: 80
      targetPort: 80 # web

  selector:
    app: proxy-v1
